@@ -409,6 +409,7 @@ enum AVCodecID {
     AV_CODEC_ID_PIXLET,
     AV_CODEC_ID_CFHD,
     AV_CODEC_ID_FMVC,
+    AV_CODEC_ID_CLEARVIDEO,
 
     /* various PCM "codecs" */
     AV_CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
